force-app/main/default/objects/JBCXM__DashboardContainer__c/JBCXM__DashboardContainer__c.object-meta.xml
<CustomObject>
    <label>DashboardContainer</label>
    <nameField>
        <label>DashboardContainer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DashboardContainer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>