force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__AllowChange__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AllowChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Change</label>
    <type>Checkbox</type>
</CustomField>