force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__ContainerInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ContainerInfo__c</fullName>
    <label>ContainerInfo</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>