force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__ContainerOptions__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ContainerOptions__c</fullName>
    <label>Container Options</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>