force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__ContainerType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ContainerType__c</fullName>
    <label>ContainerType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>