force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__CSSProperties__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CSSProperties__c</fullName>
    <label>CSSProperties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>