force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__DashboardComponent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DashboardComponent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DashboardComponent</label>
    <referenceTo>JBCXM__DashboardComponent__c</referenceTo>
    <relationshipLabel>DashboardContainer</relationshipLabel>
    <relationshipName>DashboardContainer</relationshipName>
    <type>Lookup</type>
</CustomField>