force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayOrder__c</fullName>
    <label>DisplayOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>