force-app/main/default/objects/JBCXM__DashboardContainer__c/fields/JBCXM__SourceType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SourceType__c</fullName>
    <label>Source Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>