force-app/main/default/objects/JBCXM__DashboardContainer__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>JBCXM__AllowChange__c</columns>
    <columns>JBCXM__ContainerInfo__c</columns>
    <columns>JBCXM__ContainerOptions__c</columns>
    <columns>JBCXM__ContainerType__c</columns>
    <columns>JBCXM__CSSProperties__c</columns>
    <columns>JBCXM__Dashboard__c</columns>
    <columns>JBCXM__DashboardComponent__c</columns>
    <columns>JBCXM__DisplayOrder__c</columns>
    <columns>JBCXM__UIView__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>prad</value>
    </filters>
    <label>All</label>
</ListView>